Intro already started

--- a/Tesis.bib
+++ b/Tesis.bib
@@ -289,3 +289,69 @@
   year={2015},
   publisher={CRC Press}
 }
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%References from the introduction %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%Talks about why environmental models are not precise
+@article{chatwin1982use,
+  title={The use of statistics in describing and predicting the effects of dispersing gas clouds},
+  author={Chatwin, PC},
+  journal={Journal of Hazardous Materials},
+  volume={6},
+  number={1-2},
+  pages={213--230},
+  year={1982},
+  publisher={Elsevier}
+}
+
+
+%A review in atmospheric dispersion modeling
+@article{leelHossy2014dispersion,
+  title={Dispersion modeling of air pollutants in the atmosphere: a review},
+  author={Leel{\H{o}}ssy, {\'A}d{\'a}m and Moln{\'a}r, Ferenc and Izs{\'a}k, Ferenc and Havasi, {\'A}gnes and Lagzi, Istv{\'a}n and M{\'e}sz{\'a}ros, R{\'o}bert},
+  journal={Open Geosciences},
+  volume={6},
+  number={3},
+  pages={257--278},
+  year={2014}
+}
+
+
+%Talks about uncertainty in atmospehric dispersion modeling
+@article{rao2005uncertainty,
+  title={Uncertainty analysis in atmospheric dispersion modeling},
+  author={Rao, K Shankar},
+  journal={Pure and applied geophysics},
+  volume={162},
+  number={10},
+  pages={1893--1917},
+  year={2005},
+  publisher={Springer}
+}
+
+%The show that the metheorological input accounts for half the uncertaity in the output
+@article{lewellen1989meteorological,
+  title={Meteorological data needs for modeling air quality uncertainties},
+  author={Lewellen, WS and Sykes, RI},
+  journal={Journal of Atmospheric and Oceanic Technology},
+  volume={6},
+  number={5},
+  pages={759--768},
+  year={1989}
+}
+
+
+@article{enting1990inverse,
+  title={Inverse problems in atmospheric constituent studies: II. Sources in the free atmosphere},
+  author={Enting, IG and Newsam, GN},
+  journal={Inverse Problems},
+  volume={6},
+  number={3},
+  pages={349},
+  year={1990},
+  publisher={IOP Publishing}
+}
