--- a/Tesis.tex
+++ b/Tesis.tex
@@ -91,6 +91,73 @@ Burnaby B.C - May  2017
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%Chapter 1: Introduction %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Introduction}
 
+With the concern for climate change and anthropogenic impact on the environment, 
+the importance of atmospheric dispersion models has grown over the years. Unfortunately
+for these models it is not possible to predict with complete
+accuracy the variables of interest \cite{chatwin1982use,lewellen1989meteorological}. 
+Although the precision of a model can be improved at the expense
+of adding more parameters that explain the missing physics in the model, even
+in this case, there is a limit in how accurate a model can be in its predictions.
+The reason for this limitation comes from the fact that uncertainty sources
+are different and different in nature, following  \cite{rao2005uncertainty}
+we have 
+
+
+\begin{itemize}
+\item Model uncertainty: the model does not capture all the physics.
+\item Data uncertainty: experimental measurements are not completely accurate.
+\item Stochastic uncertainty: unpredictability from the atmosphere.
+\end{itemize}
+
+This impossibility of achieving totally accurate predictions
+is in contrast with the continuously growing necessity to develop
+more accurate and computationally efficient atmospheric dispersion models \cite{leelHossy2014dispersion}. 
+
+Uncertainty in a model's prediction capabilities gets worst if the problem
+is ill-posed. For example in an ill-posed model, small uncertainty
+in the experimental data or parameters of the model, translates
+as significant uncertainties in the output. In this work we 
+are mainly concerned with the problem known as source inversion problem.
+To understand it, let us first introduce the mathematical model
+we are going to use as an approximation for the physics of
+atmospheric dispersion: the advection-diffusion equation
+for the concentration $C$
+
+\begin{equation*}
+\frac{\partial C(\x,t)}{\partial t}+\dv(\bar{\vv}C(\x,t)+\textbf{D}\nabla C(\x,t))=s(\x,t).
+\end{equation*}
+Here $\x\in\mathbb{R}^{3}$, $t$ is the time variable, \vv is the velocity wind field, $D$
+is the diffusivity tensor and $s(\x,t)$ is the source density.
+ This problem is ill-posed\cite{enting1990inverse}
+Here $C$ represents the concentration of a given pullutant at time $t$ at a point $\x\in\mathbb{R}^{3}$, $\vv$
+is the velocity field, $D$ is the diffusivity tensor and the term on the RHS represent the sources. The
+source-inversion problem is ill-posed .
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\begin{itemize}
+
+\newpage
+\item Next talk about what has been done so far in parameter estimation and uncertainty quantification
+in atmospheric models.
+\item 
+\item Then talk about our approach. Give an overview of the methods, the results obtained
+and how they challenge some of the old views.
+\item Lastly explain the distribution of the thesis chapter by chapter.
+\end{itemize}
 \newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%Chapter 2: Theoretical and Computational Framework %%%%%%%%%%%%%%%%
