Introduction almost done Aug 6 2017

--- a/Tesis.bib
+++ b/Tesis.bib
@@ -355,3 +355,70 @@
   year={1990},
   publisher={IOP Publishing}
 }
+
+ %First approach to use statistics to estimate sources
+@article{lin2002relative,
+  title={Relative source contribution analysis using an air trajectory statistical approach},
+  author={Lin, Ching-Ho and Chang, Len-Fu W},
+  journal={Journal of Geophysical Research: Atmospheres},
+  volume={107},
+  number={D21},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+
+
+@article{lushi2010inverse,
+  title={An inverse Gaussian plume approach for estimating atmospheric pollutant emissions from multiple point sources},
+  author={Lushi, Enkeleida and Stockie, John M},
+  journal={Atmospheric Environment},
+  volume={44},
+  number={8},
+  pages={1097--1107},
+  year={2010},
+  publisher={Elsevier}
+}
+
+
+@article{skiba2003method,
+  title={On a method of detecting the industrial plants which violate prescribed emission rates},
+  author={Skiba, Yuri N},
+  journal={Ecological Modelling},
+  volume={159},
+  number={2},
+  pages={125--132},
+  year={2003},
+  publisher={Elsevier}
+}
+
+@article{sohn2002rapidly,
+  title={Rapidly locating and characterizing pollutant releases in buildings},
+  author={Sohn, Michael D and Reynolds, Pamela and Singh, Navtej and Gadgil, Ashok J},
+  journal={Journal of the Air \& Waste Management Association},
+  volume={52},
+  number={12},
+  pages={1422--1432},
+  year={2002},
+  publisher={Taylor \& Francis}
+}
+
+@article{hosseini2016bayesian,
+  title={Bayesian estimation of airborne fugitive emissions using a Gaussian plume model},
+  author={Hosseini, Bamdad and Stockie, John M},
+  journal={Atmospheric Environment},
+  volume={141},
+  pages={122--138},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{keats2007bayesian,
+  title={Bayesian inference for source determination with applications to a complex urban environment},
+  author={Keats, Andrew and Yee, Eugene and Lien, Fue-Sang},
+  journal={Atmospheric environment},
+  volume={41},
+  number={3},
+  pages={465--479},
+  year={2007},
+  publisher={Elsevier}
+}
